PortalPackage/ Enrollment Rx Core/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active_Enrollment_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hidden auto-populated field with a lookup to the current active EO for this contact. Used by the Contact Status field.</description>
        <inlineHelpText>Hidden auto-populated field with a lookup to the current active EO for this contact. Used by the Contact Status field.</inlineHelpText>
        <label>Active Application Record</label>
        <referenceTo>Enrollment_Opportunity__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anticipated_Term_Start_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anticipated Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>Auto-populated field showing the term and admissions status of the current active Enrollment Opportunity for this Contact.</description>
        <formula>if(Active_Enrollment_Opportunity__r.Term_Intended_to_Start__r.Name &amp; &quot;: &quot; &amp; Active_Enrollment_Opportunity__r.Admissions_Status_Text__c = &quot;: &quot;, &quot;&quot;, Active_Enrollment_Opportunity__r.Term_Intended_to_Start__r.Name &amp; &quot;: &quot; &amp; Active_Enrollment_Opportunity__r.Admissions_Status_Text__c)</formula>
        <inlineHelpText>Auto-populated field showing the term and admissions status of the current active Enrollment Opportunity for this Contact.</inlineHelpText>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Email_Address__c</fullName>
        <description>A Facebook-proxied email address to allow email to be sent to the user via Facebook.</description>
        <inlineHelpText>A Facebook-proxied email address to allow email to be sent to the user via Facebook.</inlineHelpText>
        <label>Facebook Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <description>ERx Field</description>
        <label>Facebook ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Log__c</fullName>
        <description>Shows all activity from the Facebook app.</description>
        <inlineHelpText>Shows all activity from the Facebook app.</inlineHelpText>
        <label>Facebook Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_EO_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field used to determine if a new record has been checked for Enrollment Opportunity creation. Used in a workflow rule, which forces the ContactBeforeUpdate trigger to fire.</description>
        <inlineHelpText>Hidden field used to determine if a new record has been checked for Enrollment Opportunity creation. Used in a workflow rule, which forces the ContactBeforeUpdate trigger to fire.</inlineHelpText>
        <label>Has EO Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_School_Code__c</fullName>
        <externalId>true</externalId>
        <label>High School Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>High School Employer</label>
        <referenceTo>High_School__c</referenceTo>
        <relationshipLabel>High School Employees</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>High School Name</label>
        <referenceTo>High_School__c</referenceTo>
        <relationshipLabel>High School Students</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Fair</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IM_Account_Name__c</fullName>
        <label>IM Account Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program of Interest</label>
        <referenceTo>Program_Offered__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIS_ID__c</fullName>
        <description>ERx Field</description>
        <label>SIS ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <description>ERx Field</description>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status_Modified_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Status Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Student_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Information</label>
        <referenceTo>Student_Information__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>